<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.greenfam.sonicnews.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarStyle="insideOverlay">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userIcon"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/balloon"
                app:civ_border_color="#ffffffff"
                app:civ_border_width="1.5dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25dp"
                android:text="@string/action_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/long_button_style"
                android:textAllCaps="true"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/register_link"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/forget_password_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_gravity="start|left"
                    android:gravity="center"
                    android:text="@string/register_link"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="OR LOGIN WITH"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <at.markushi.ui.CircleButton
                    android:id="@+id/phone_login"
                    android:layout_width="64dip"
                    android:layout_height="64dip"
                    android:src="@drawable/phone_logo"
                    app:cb_color="@color/circle_button_lightblue"
                    app:cb_pressedRingWidth="35dip"
                    android:layout_gravity="center_horizontal"/>

                <at.markushi.ui.CircleButton
                    android:id="@+id/google_login"
                    android:layout_width="64dip"
                    android:layout_height="64dip"
                    android:src="@drawable/google"
                    app:cb_color="@color/circle_button_red"
                    app:cb_pressedRingWidth="35dip"
                    android:layout_gravity="center_horizontal"/>

                <at.markushi.ui.CircleButton
                    android:id="@+id/twitter_login"
                    android:layout_width="64dip"
                    android:layout_height="64dip"
                    android:src="@drawable/twitter"
                    app:cb_color="@color/circle_button_lightblue"
                    app:cb_pressedRingWidth="35dip"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="?android:attr/listDivider"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
